==> lyusupov/SoftRF/software/firmware/source/SoftRF/src/platform/Platform_PSoC4.cpp <==
#include <SPI.h>
#include <Wire.h>
#include "SoCHelper.h"
#include "RFHelper.h"
#include "EEPROMHelper.h"
#include "GNSSHelper.h"
#include "BaroHelper.h"
#include "LEDHelper.h"
#include <U8x8lib.h>
#include <innerWdt.h>
#include <lorawan_port.h>

static void PSoC4_setup()
{
  uint32 reset_reason = CySysGetResetReason(0);

  switch (reset_reason)
  {
    case CY_SYS_RESET_WDT:
      reset_info.reason = REASON_WDT_RST; break;
    case CY_SYS_RESET_PROTFAULT:
      reset_info.reason = REASON_EXCEPTION_RST; break;

    case CY_SYS_RESET_SW:
    default:
      reset_info.reason = REASON_DEFAULT_RST; break;
  }

  pinMode(SOC_GPIO_PIN_OLED_PWR, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_OLED_PWR, LOW);

  pinMode(SOC_GPIO_PIN_OLED_RST, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_OLED_RST, HIGH);

  delay(200);

  /* SSD1306 I2C OLED probing */
  Wire.begin();
  Wire.beginTransmission(SSD1306_OLED_I2C_ADDR);
  if (Wire.endTransmission() == 0) {
    hw_info.model = SOFTRF_MODEL_MINI;
  }

  pinMode(SOC_GPIO_PIN_OLED_RST, ANALOG);
  pinMode(SOC_GPIO_PIN_OLED_PWR, ANALOG);

  if (hw_info.model == SOFTRF_MODEL_MINI) {
    pinMode(SOC_GPIO_PIN_OLED_PWR, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_OLED_PWR, LOW);

    pinMode(SOC_GPIO_PIN_OLED_RST, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_OLED_RST, HIGH);

    pinMode(SOC_GPIO_PIN_GNSS_PWR, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_GNSS_PWR, LOW);
  }
}

static void PSoC4_loop()
{
  if (PSoC4_state == PSOC4_LOW_POWER) {
    lowPowerHandler();
  }
}

static void PSoC4_fini()
{
  if (hw_info.model == SOFTRF_MODEL_MINI) {
    digitalWrite(SOC_GPIO_PIN_GNSS_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_GNSS_PWR, ANALOG);

    delay(2000);

    pinMode(SOC_GPIO_PIN_OLED_RST, ANALOG);

    digitalWrite(SOC_GPIO_PIN_OLED_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_OLED_PWR, ANALOG);

    pinMode(SOC_GPIO_PIN_BATTERY, ANALOG);

//    settings->nmea_l = false;
//    settings->nmea_s = false;

    Serial.end();

    pinMode(SOC_GPIO_PIN_BUTTON, INPUT);
    attachInterrupt(SOC_GPIO_PIN_BUTTON, PSoC4_User_Key_Wakeup, FALLING);

    pinMode(SOC_GPIO_PIN_CONS_RX, INPUT);
    attachInterrupt(SOC_GPIO_PIN_CONS_RX, PSoC4_SerialWakeup, FALLING);
  }

  PSoC4_state = PSOC4_LOW_POWER;
//  CyHalt(0);
}

static void PSoC4_reset()
{
  CySoftwareReset();
}

static uint32_t PSoC4_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  uint32_t id = getID();

  /* remap address to avoid overlapping with congested FLARM range */
  if (((id & 0x00FFFFFF) >= 0xDD0000) && ((id & 0x00FFFFFF) <= 0xDFFFFF)) {
    id += 0x100000;
  }

  return id;
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static void PSoC4_swSer_begin(unsigned long baud)
{
  swSer.begin(baud);

  if (hw_info.model == SOFTRF_MODEL_MINI) {

    /* 'Cold' restart */
//    swSer.write("$PGKC030,3,1*2E\r\n");
//    swSer.flush(); delay(250);

    /* give GOKE GNSS few ms to warm up */
    delay(500);

    /* Firmware version request */
    swSer.write("$PGKC462*2F\r\n");
    swSer.flush(); delay(250);

    /* GPS + GLONASS */
    swSer.write("$PGKC115,1,1,0,0*2A\r\n");
    swSer.flush(); delay(250);

    /* RMC + GGA + GSA */
    swSer.write("$PGKC242,0,1,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0*36\r\n");
    swSer.flush(); delay(250);

#if SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN
    /* Enable 3D fix 1PPS output */
//  swSer.write("$PGKC161,2,100,1000*07\r\n");
//  swSer.flush(); delay(250);
#endif
  }
}

static byte PSoC4_Display_setup()
{
  byte rval = DISPLAY_NONE;

#if defined(USE_OLED)

  if (hw_info.model == SOFTRF_MODEL_MINI) {
    /* SSD1306 I2C OLED probing */
    Wire.begin();
    Wire.beginTransmission(SSD1306_OLED_I2C_ADDR);
    if (Wire.endTransmission() == 0) {
      u8x8 = &u8x8_i2c;
      rval = DISPLAY_OLED_TTGO;
    }

    if (u8x8) {
      u8x8->begin();
      u8x8->setFont(u8x8_font_chroma48medium8_r);
      u8x8->clear();

      u8x8->draw2x2String(2, 3, "SoftRF");
    }
  }
#endif /* USE_OLED */

  return rval;
}

static void PSoC4_Display_loop()
{
#if defined(USE_OLED)
  char buf[16];
  uint32_t disp_value;

  if (hw_info.model == SOFTRF_MODEL_MINI && u8x8) {
    if (!OLED_display_frontpage) {

      u8x8->clear();

      u8x8->drawString(1, 1, "ID");

      itoa(ThisAircraft.addr & 0xFFFFFF, buf, 16);
      u8x8->draw2x2String(0, 2, buf);

      u8x8->drawString(8, 1, "PROTOCOL");

      u8x8->draw2x2String(14, 2, OLED_Protocol_ID[ThisAircraft.protocol]);

      u8x8->drawString(1, 5, "RX");

      itoa(rx_packets_counter % 1000, buf, 10);
      u8x8->draw2x2String(0, 6, buf);

      u8x8->drawString(9, 5, "TX");

      if (settings->txpower == RF_TX_POWER_OFF ) {
        strcpy(buf, "OFF");
      } else {
        itoa(tx_packets_counter % 1000, buf, 10);
      }
      u8x8->draw2x2String(8, 6, buf);

      OLED_display_frontpage = true;
    } else {
      if (rx_packets_counter > prev_rx_packets_counter) {
        disp_value = rx_packets_counter % 1000;
        itoa(disp_value, buf, 10);

        if (disp_value < 10) {
          strcat_P(buf,PSTR("  "));
        } else {
          if (disp_value < 100) {
            strcat_P(buf,PSTR(" "));
          };
        }

        u8x8->draw2x2String(0, 6, buf);
        prev_rx_packets_counter = rx_packets_counter;
      }
      if (tx_packets_counter > prev_tx_packets_counter) {
        disp_value = tx_packets_counter % 1000;
        itoa(disp_value, buf, 10);

        if (disp_value < 10) {
          strcat_P(buf,PSTR("  "));
        } else {
          if (disp_value < 100) {
            strcat_P(buf,PSTR(" "));
          };
        }

        u8x8->draw2x2String(8, 6, buf);
        prev_tx_packets_counter = tx_packets_counter;
      }
    }
  }
#endif /* USE_OLED */
}

static float PSoC4_Battery_voltage()
{
  uint16_t mV = 0;

  if (hw_info.model == SOFTRF_MODEL_MINI &&
      PSoC4_state   == PSOC4_ACTIVE) {
    /* GPIO7 is shared between USER_KEY and VBAT_ADC_CTL functions */
    int user_key_state = digitalRead(SOC_GPIO_PIN_BUTTON);

    /* if the key is not pressed down - activate VBAT_ADC_CTL */
    if (user_key_state == HIGH) {
      pinMode(VBAT_ADC_CTL,OUTPUT);
      digitalWrite(VBAT_ADC_CTL,LOW);
    }

    mV = analogRead(SOC_GPIO_PIN_BATTERY);

    /* restore previous state of VBAT_ADC_CTL pin */
    if (user_key_state == HIGH) {
      /*
       * CubeCell-GPS has external 10K VDD pullup resistor
       * connected to GPIO7 (USER_KEY / VBAT_ADC_CTL) pin
       */
      pinMode(VBAT_ADC_CTL, INPUT);
    }
  }

  return mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
}

static void PSoC4_WDT_fini()
{
  CySysWdtDisable();
}
